jms destination value resolving

--- a/test/service1/src/main/resources/application.properties
+++ b/test/service1/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=service1
 logging.level.root=INFO
 logging.level.org.springframework.web.socket=TRACE
+queue1=queue-1
+service2.url=service2
