--- a/test/service1/src/test/resources/application.properties
+++ b/test/service1/src/test/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=service1
 logging.level.connections=TRACE
 logging.level.io.github.m4gshm.connection=TRACE
+queue1=queue1
+service2.url=service2
