print jpa dependencies

--- a/test/service1/src/main/resources/application.properties
+++ b/test/service1/src/main/resources/application.properties
@@ -1,5 +1,12 @@
+debug=true
 spring.application.name=service1
 logging.level.root=INFO
 logging.level.org.springframework.web.socket=TRACE
-queue1=queue-1
+queue1=queue1
 service2.url=service2
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:service1
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
